[workspace]
resolver = "2"
members = [
    "chain-core",
    "chain-consensus", 
    "chain-network",
    "chain-db",
    "chain-vm",
    "chain-node",
    "chain-rpc",
    "chain-cli",
    "chain-dev-tools"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rust Chain Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustfromscratch/chain"
homepage = "https://github.com/rustfromscratch/chain"
documentation = "https://github.com/rustfromscratch/chain"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "rust", "p2p"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Cryptography
sha3 = "0.10"
blake3 = "1.5"
secp256k1 = { version = "0.31", features = ["recovery", "rand"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = "4.1"
rand = "0.9.1"

# Networking
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux", 
    "gossipsub",
    "request-response",
    "identify",
    "kad",
    "relay",
    "autonat",
    "ping"
] }

# Database
rocksdb = "0.23"
sled = "0.34"

# Web framework for RPC
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14.0"

# Testing and benchmarking
criterion = { version = "0.6.0", features = ["html_reports"] }
proptest = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Configuration
toml = "0.8"
config = "0.15.11"

# Utilities
hex = "0.4"
bytes = "1.0"
futures = "0.3"
parking_lot = "0.12"
dashmap = "6.1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true
