[package]
name = "chain-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Local dependencies
chain-core = { path = "../chain-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Cryptography for VRF
rand = { workspace = true }
curve25519-dalek = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
