[package]
name = "chain-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Local dependencies
chain-core = { path = "../chain-core" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Networking
libp2p = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

# Cryptography for peer identity
rand = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
